--- a/mbPictureMatch/Base.lproj/Main.storyboard
+++ b/mbPictureMatch/Base.lproj/Main.storyboard
@@ -44,15 +44,18 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="kLG-GP-b81" userLabel="Image Stack View">
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kLG-GP-b81" userLabel="Image Stack View">
                                         <rect key="frame" x="0.0" y="460.5" width="375" height="206.5"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Oyh-o6-0mk" userLabel="Row Stack View">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="103"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="Oyh-o6-0mk" userLabel="Row Stack View">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="100.5"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KM6-vF-PgD">
-                                                        <rect key="frame" x="0.0" y="0.0" width="125" height="103"/>
+                                                    <button opaque="NO" contentMode="top" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KM6-vF-PgD">
+                                                        <rect key="frame" x="0.0" y="0.0" width="101" height="100.5"/>
                                                         <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="KM6-vF-PgD" secondAttribute="height" multiplier="1:1" id="eno-M6-Jyg"/>
+                                                        </constraints>
                                                         <state key="normal" title="Lemon" image="fruit00">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
@@ -60,9 +63,12 @@
                                                             <action selector="buttonImagePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LVS-Og-oE1"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NNk-pp-cRY">
-                                                        <rect key="frame" x="125" y="0.0" width="125" height="103"/>
+                                                    <button opaque="NO" contentMode="top" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NNk-pp-cRY">
+                                                        <rect key="frame" x="137" y="0.0" width="101" height="100.5"/>
                                                         <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="NNk-pp-cRY" secondAttribute="height" multiplier="1:1" id="mkg-s0-G4C"/>
+                                                        </constraints>
                                                         <state key="normal" title="Apple" image="fruit02">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
@@ -70,9 +76,12 @@
                                                             <action selector="buttonImagePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Di7-zD-xoL"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSv-za-xCP">
-                                                        <rect key="frame" x="250" y="0.0" width="125" height="103"/>
+                                                    <button opaque="NO" contentMode="top" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSv-za-xCP">
+                                                        <rect key="frame" x="274" y="0.0" width="101" height="100.5"/>
                                                         <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="fSv-za-xCP" secondAttribute="height" multiplier="1:1" id="gvF-1k-Ung"/>
+                                                        </constraints>
                                                         <state key="normal" title="Orange" image="fruit01">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
@@ -82,12 +91,15 @@
                                                     </button>
                                                 </subviews>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="EgK-kj-N7c" userLabel="Row Stack View">
-                                                <rect key="frame" x="0.0" y="103" width="375" height="103.5"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="EgK-kj-N7c" userLabel="Row Stack View">
+                                                <rect key="frame" x="0.0" y="105.5" width="375" height="101"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UWg-ph-WAH">
-                                                        <rect key="frame" x="0.0" y="0.0" width="125" height="103.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="101" height="101"/>
                                                         <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="UWg-ph-WAH" secondAttribute="height" multiplier="1:1" id="gsC-5h-ZHF"/>
+                                                        </constraints>
                                                         <state key="normal" title="Strawberry" image="fruit04">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
@@ -96,8 +108,11 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S4b-Wc-VNC">
-                                                        <rect key="frame" x="125" y="0.0" width="125" height="103.5"/>
+                                                        <rect key="frame" x="137" y="0.0" width="101" height="101"/>
                                                         <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="S4b-Wc-VNC" secondAttribute="height" multiplier="1:1" id="CRF-bM-iYT"/>
+                                                        </constraints>
                                                         <state key="normal" title="Grapes" image="fruit03">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
@@ -106,8 +121,11 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c9k-Pv-eIR">
-                                                        <rect key="frame" x="250" y="0.0" width="125" height="103.5"/>
+                                                        <rect key="frame" x="274" y="0.0" width="101" height="101"/>
                                                         <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="c9k-Pv-eIR" secondAttribute="height" multiplier="1:1" id="U5Q-hS-XAw"/>
+                                                        </constraints>
                                                         <state key="normal" title="Cherry" image="fruit05">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
@@ -161,22 +179,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="Wxb-nR-dzH">
-                                <rect key="frame" x="20" y="175" width="335" height="342"/>
+                                <rect key="frame" x="20" y="175" width="335" height="201"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="currentScoreSavedLabel 0" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pwb-2N-Je7" userLabel="currentScoreSavedLabel">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="41"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="60"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="highScoreSavedLabel 0" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iHj-tx-e7P" userLabel="highScoreSavedLabel">
-                                        <rect key="frame" x="0.0" y="141" width="335" height="41"/>
+                                        <rect key="frame" x="0.0" y="160" width="335" height="41"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RMD-Ke-6Hd">
-                                        <rect key="frame" x="0.0" y="282" width="335" height="60"/>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RMD-Ke-6Hd">
+                                        <rect key="frame" x="0.0" y="201" width="335" height="60"/>
                                         <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="MTm-iS-XxT"/>
