--- a/mbPictureMatch/Base.lproj/Main.storyboard
+++ b/mbPictureMatch/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,24 +12,24 @@
             <objects>
                 <viewController storyboardIdentifier="GameViewStoryboard" title="GameViewController" id="BYZ-38-t0r" customClass="GameViewController" customModule="mbPictureMatch" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kHj-ug-PXG" userLabel="Main Stack View">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="rgv-Qw-Si2" userLabel="Score Stack View">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="currentScoreLabel 0" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z4r-4c-vry" userLabel="currentScoreLabel">
-                                                <rect key="frame" x="0.0" y="0.0" width="207" height="49"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="187.5" height="49"/>
                                                 <color key="backgroundColor" red="0.98039215686274506" green="0.69411764705882351" blue="0.62745098039215685" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <color key="textColor" red="0.1764705882" green="0.20392156859999999" blue="0.21176470589999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="highScoreLabel 0" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M5d-v4-SMo">
-                                                <rect key="frame" x="207" y="0.0" width="207" height="49"/>
+                                                <rect key="frame" x="187.5" y="0.0" width="187.5" height="49"/>
                                                 <color key="backgroundColor" red="0.88235294117647056" green="0.4392156862745098" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -42,19 +42,19 @@
                                         </constraints>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="wordToGuess" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xwe-lj-XMS" userLabel="wordToGuessLabel">
-                                        <rect key="frame" x="0.0" y="49" width="414" height="512"/>
+                                        <rect key="frame" x="0.0" y="49" width="375" height="411.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="50"/>
                                         <color key="textColor" red="0.1764705882" green="0.20392156859999999" blue="0.21176470589999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="kLG-GP-b81" userLabel="Image Stack View">
-                                        <rect key="frame" x="0.0" y="561" width="414" height="257"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="kLG-GP-b81" userLabel="Image Stack View">
+                                        <rect key="frame" x="0.0" y="460.5" width="375" height="206.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="Oyh-o6-0mk" userLabel="Row Stack View">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="126"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="103"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="top" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KM6-vF-PgD">
-                                                        <rect key="frame" x="0.0" y="0.0" width="126" height="126"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="103.5" height="103"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="KM6-vF-PgD" secondAttribute="height" multiplier="1:1" id="eno-M6-Jyg"/>
                                                         </constraints>
@@ -66,7 +66,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="top" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NNk-pp-cRY">
-                                                        <rect key="frame" x="144" y="0.0" width="126" height="126"/>
+                                                        <rect key="frame" x="136" y="0.0" width="103" height="103"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="NNk-pp-cRY" secondAttribute="height" multiplier="1:1" id="mkg-s0-G4C"/>
                                                         </constraints>
@@ -78,7 +78,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="top" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSv-za-xCP">
-                                                        <rect key="frame" x="288" y="0.0" width="126" height="126"/>
+                                                        <rect key="frame" x="271.5" y="0.0" width="103.5" height="103"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="fSv-za-xCP" secondAttribute="height" multiplier="1:1" id="gvF-1k-Ung"/>
                                                         </constraints>
@@ -92,10 +92,10 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="EgK-kj-N7c" userLabel="Row Stack View">
-                                                <rect key="frame" x="0.0" y="131" width="414" height="126"/>
+                                                <rect key="frame" x="0.0" y="103" width="375" height="103.5"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UWg-ph-WAH">
-                                                        <rect key="frame" x="0.0" y="0.0" width="126" height="126"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="103.5" height="103.5"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="UWg-ph-WAH" secondAttribute="height" multiplier="1:1" id="gsC-5h-ZHF"/>
                                                         </constraints>
@@ -107,7 +107,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S4b-Wc-VNC">
-                                                        <rect key="frame" x="144" y="0.0" width="126" height="126"/>
+                                                        <rect key="frame" x="136" y="0.0" width="103" height="103.5"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="S4b-Wc-VNC" secondAttribute="height" multiplier="1:1" id="CRF-bM-iYT"/>
                                                         </constraints>
@@ -119,7 +119,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c9k-Pv-eIR">
-                                                        <rect key="frame" x="288" y="0.0" width="126" height="126"/>
+                                                        <rect key="frame" x="271.5" y="0.0" width="103.5" height="103.5"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="c9k-Pv-eIR" secondAttribute="height" multiplier="1:1" id="U5Q-hS-XAw"/>
                                                         </constraints>
@@ -173,26 +173,26 @@
             <objects>
                 <viewController storyboardIdentifier="GameOverStoryboard" id="gXx-r2-veK" customClass="GameOverViewController" customModule="mbPictureMatch" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VR4-Bl-tNT">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="Wxb-nR-dzH">
-                                <rect key="frame" x="20" y="219" width="374" height="380"/>
+                                <rect key="frame" x="20" y="175" width="335" height="380"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="currentScoreSavedLabel 0" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pwb-2N-Je7" userLabel="currentScoreSavedLabel">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="60"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="60"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                         <color key="textColor" red="0.87450980392156863" green="0.90196078431372551" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="highScoreSavedLabel 0" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iHj-tx-e7P" userLabel="highScoreSavedLabel">
-                                        <rect key="frame" x="0.0" y="160" width="374" height="60"/>
+                                        <rect key="frame" x="0.0" y="160" width="335" height="60"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                         <color key="textColor" red="0.87450980392156863" green="0.90196078431372551" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RMD-Ke-6Hd">
-                                        <rect key="frame" x="0.0" y="320" width="374" height="60"/>
+                                        <rect key="frame" x="0.0" y="320" width="335" height="60"/>
                                         <color key="backgroundColor" red="0.0" green="0.72156862745098038" blue="0.58039215686274503" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="MTm-iS-XxT"/>
@@ -209,7 +209,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="specialOutcomeLabel" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6c4-du-9Zt">
-                                <rect key="frame" x="20" y="69" width="374" height="100"/>
+                                <rect key="frame" x="20" y="25" width="335" height="100"/>
                                 <color key="backgroundColor" red="0.035294117647058823" green="0.51764705882352935" blue="0.8901960784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
